--- a/manifest.yml
+++ b/manifest.yml
@@ -7,10 +7,10 @@ applications:
   buildpack: python_buildpack
   command: #app start command here 
   env:
-    MODEL: <CHANGE_ME> #model 
-    SIZE: <CHANGE_ME> #size of the shoe
-    WIDTH: <CHANGE_ME> #width of shoe
-    TARGET_PRICE: <CHANGE_ME> #targt price
-    EMAIL: <CHANGE_ME> #email to alert
-    SMTP_USER: <CHANGE_ME> #gmail smtp user account
-    SMTP_PASS: <CHANGE_ME> #gmail smtp user pass
+    MODEL: <CHANGE ME>
+    SIZE: <CHANGE ME> 
+    WIDTH: <CHANGE ME>
+    TARGET_PRICE: <CHANGE ME>
+    SLEEP_TIME_SEC: <CHANGE ME>
+    PAPER_TRAIL_EVENT: <CHANGE ME>
+    SLACK_WEBHOOK: <CHANGE ME>
